@@ -28,6 +28,7 @@ This release includes the following bugfixes:
  o configure uses pkg-config for cross-compiles as well
  o improved NSS detection in configure
  o cookie expiry date at 1970-jan-1 00:00:00
+ o libcurl-OpenSSL failed to verify some certs with Subject Alternative Name
 
 This release includes the following known bugs:
 
@@ -38,6 +39,6 @@ advice from friends like these:
 
  Karl Moerder, Kamil Dudka, Krister Johansen, Andre Guibert de Bruet,
  Michal Marek, Eric Wong, Guenter Knauf, Peter Sylvester, Daniel Johnson,
- Claes Jakobsson
+ Claes Jakobsson, Sven Anders
 
         Thanks! (and sorry if I forgot to mention someone)
